# TgBotM

./: README.md  backend.dockerfile  docker-compose.yaml
app/: generate_user_in_admin.py  pyproject.toml  Корректировка оформленной накладной.docx  Открытие доступов в ЭДО для сотрудников.docx  Редактирование некорректного перемещения.docx  Смена статуса заявки.docx  добавление_материалов_на_свободный_остаток.docx  добавление_материалов_на_свободный_остаток.xlsx  шаблон_добавления_наименований_материалов_в_ЭДО.xlsx
app/app/: loader.py  logger.py  main.py
app/app/admin/: app.py
app/app/admin/templates/: index.html
app/app/admin/templates/admin/: index.html
app/app/admin/views/: application.py  base.py  tg_user.py  users.py
app/app/core/: config.py  container.py
app/app/db/: session.py
app/app/docs/: Добавление объекта в ЭДО.docx  Корректировка поставок.docx
app/app/handlers/: add_conversion_factor_by_name.py  chat.py  form_change_status_application.py  start.py
app/app/handlers/forms/: __init__.py
app/app/handlers/forms/administrator/: __init__.py  add_edo.py  open_edo.py  (+2 more)
app/app/keyboards/: clallback_data.py  inline_keyboard.py
app/app/middlewares/: __init__.py  throttling.py
app/app/models/: application.py  job_application.py  telegram_user.py  user.py
app/app/repository/: application.py  base.py  job.py  telegarm_user.py
app/app/services/: application.py  tg_user_service.py
app/app/states/: admin_or_moderator.py  application.py  base.py  tgbot_states.py
app/app/utils/: const.py  const_add_subobjects.py  const_edit_shpmnt.py  get_data.py
(+11 files in other folders)
