[tool.poetry]
name = "tgbotm"
version = "1.0.0"
description = "Tech. support and administration bot"
authors = ["Axel791 <HS.Kazakov@mail.ru>"]
readme = "README.md"
packages = [{include = "tgbotm"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.23.1"
pydantic = "^1.10.2"
dependency-injector = "^4.41.0"
psycopg2 = "^2.9.5"
sqlalchemy = "^1.4.45"
flask-admin = "^1.6.0"
loguru = "^0.6.0"
flake8 = "^6.0.0"
uvicorn = "^0.20.0"
python-telegram-bot-pagination = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
